--- a/question.html
+++ b/question.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<form name="contact" method="POST" netlify>
 <div class="container">
 
     <!-------- HEADER -------->
@@ -226,5 +227,6 @@
     </footer> <!-- footer -->
 
 </div> <!-- container -->
+</form>
 </body>
 </html>
